[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/Characters_0000_Guy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Npc.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 37.4764

[sub_resource type="CircleShape2D" id=2]
radius = 69.6625

[sub_resource type="CircleShape2D" id=5]
radius = 168.145

[sub_resource type="CircleShape2D" id=4]
radius = 419.56

[node name="Npc" type="KinematicBody2D" groups=[
"NPC",
]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.15952, -116.01 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="chainArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="chainArea"]
shape = SubResource( 2 )

[node name="ChainChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChainChecker"]
shape = SubResource( 5 )

[node name="NPCArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCArea"]
shape = SubResource( 4 )

[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="chainArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="chainArea" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ChainChecker" to="." method="_on_ChainChecker_body_entered"]
[connection signal="body_exited" from="ChainChecker" to="." method="_on_ChainChecker_body_exited"]
[connection signal="body_entered" from="NPCArea" to="." method="_on_NPCArea_body_entered"]
[connection signal="body_exited" from="NPCArea" to="." method="_on_NPCArea_body_exited"]
